compiler/fir/analysis-tests/testData/resolve/suppress/ignoreAttributeInComments.kt
/*
    <!IGNORE_MULTI_LINE!>ignore multiline<!> *
 */